--- a/aim2.qmd
+++ b/aim2.qmd
@@ -185,7 +185,7 @@ Our first goal was to establish that our migration term, which accounts for coun
 
 ### Incorporating urbanicity
 
-Next, we sought to determine whether the role that county-to-county migration flows plays in county-level health outcomes differs between rural and urban counties (Hypothesis 2). [Figure 1](#figure-aim2_figure1) demonstrates lower BIC scores for models that include both the migration term and interaction terms with urbanicity. These BIC scores are also available in [as a table in Appendix B](#table-aim2_table3). The difference in BIC scores between models that include the migration term and those that do not is more pronounced when the interaction terms added. This suggests that the migration term significantly enhances model explainability when accounting for urbanicity, indicating that the relationship between average county-level health and migration may differ substantially across urbanicity levels.
+Next, we sought to determine whether the role that county-to-county migration flows plays in county-level health outcomes differs between rural and urban counties (Hypothesis 2). [Figure 3.1](#figure-aim2_figure1) demonstrates lower BIC scores for models that include both the migration term and interaction terms with urbanicity. These BIC scores are also available in [Table B.1](#tbl-aim2_table3) in Appendix B. The difference in BIC scores between models that include the migration term and those that do not is more pronounced when the interaction terms added. This suggests that the migration term significantly enhances model explainability when accounting for urbanicity, indicating that the relationship between average county-level health and migration may differ substantially across urbanicity levels.
 
 ::: {#figure-aim2_figure1}
 
@@ -259,11 +259,11 @@ ggplot(data = tf, aes(x = `Degrees of Freedom`,
 
 :::
 
-In [Figure 1](#figure-aim2_figure1), we see that the difference in the BIC scores of models with splines with two degrees of freedom and models with splines with four degrees of freedom for $y_{i,t-1}$ and $mig_{it}$ is only `r abs(round(spatonly$BIC[spatonly$Model == "fff4r"] - spatonly$BIC[spatonly$Model == "fff2r"], 1))`. Due to concerns about potential overfitting, and since there appears to be little explainability added by additional degrees of freedom, we chose to use a model with splines with two degrees of freedom for lagged premature mortality rate and migration term, thus, we settled on using only two degrees of freedom moving forward.
+In [Figure 3.1](#figure-aim2_figure1), we see that the difference in the BIC scores of models with splines with two degrees of freedom and models with splines with four degrees of freedom for $y_{i,t-1}$ and $mig_{it}$ is only `r abs(round(spatonly$BIC[spatonly$Model == "fff4r"] - spatonly$BIC[spatonly$Model == "fff2r"], 1))`. Due to concerns about potential overfitting, and since there appears to be little explainability added by additional degrees of freedom, we chose to use a model with splines with two degrees of freedom for lagged premature mortality rate and migration term, thus, we settled on using only two degrees of freedom moving forward.
 
 ### Accounting for unmeasured factors
 
-Our final set of analyses replace our migration term $mig_{it}$ with the adjusted migration term $amig_{it}$ in our effort to take into account unmeasured factors in county-to-county migration flows (Hypothesis 3). When using the same value for $d_{ij}$ across all county pairs, we found that the model with the most explanatory power had $d_{ij}=0$. As the magnitude of the difference between the health of origin and destination increased, our models had less explanatory power as measured by higher BIC scores (see [Figure 2](#figure-aim2_fig2)). This suggests that, contrary to Hypothesis 3, health-related selection for migration may not be important to modeling county-level health.
+Our final set of analyses replace our migration term $mig_{it}$ with the adjusted migration term $amig_{it}$ in our effort to take into account unmeasured factors in county-to-county migration flows (Hypothesis 3). When using the same value for $d_{ij}$ across all county pairs, we found that the model with the most explanatory power had $d_{ij}=0$. As the magnitude of the difference between the health of origin and destination increased, our models had less explanatory power as measured by higher BIC scores (see [Figure 3.2](#figure-aim2_fig2)). This suggests that, contrary to Hypothesis 3, health-related selection for migration may not be important to modeling county-level health.
 
 ::: {#figure-aim2_fig2}
 
@@ -283,7 +283,7 @@ ggplot(data = bick_nourb_tot, aes(x = as.numeric(newk), y = as.numeric(bicspat))
 
 However, we reach a different conclusion when varying $d_{ij}$ based on the urbanicity of the origin and destination (rural-to-urban, rural-to-rural, urban-to-rural, and urban-to-urban). Our coarse grid search identified a minimum BIC score when $(d_{uu} =-100, d_{rr}=0, d_{ru}=0, d_{ur}=0)$. Refining our search around this minimum, we identified a minimum BIC score for the set $(d_{uu} =-100, d_{rr}=0, d_{ru}=0, d_{ur}=20)$. Thus, our models improve when we assume there are some health-related selection of migrants from unmeasured factors, thereby supporting Hypothesis 3.
 
-[Figure 3](#figure-aim2_figure3) shows the relationship between BIC scores and values of $d_{ij}$ for each migration type, while holding other values constant at 0. For migration to rural counties ($d_{rr}$ and $d_{ru}$), the minimum BIC score occurs when the model assumes these counties attract individuals with average county health (i.e. when $d_{rr} = 0$ and $d_{ru} = 0$). However, for urban-to-urban migration ($d_{uu}$), lower BIC scores occur when the model assumes the urban counties attract individuals with lower age-adjusted premature mortality rates, suggesting that movers tend to migrate from healthier urban counties to less healthy urban counties. For rural-to-urban migration ($d_{ru}$), there is some indication that rural origins have higher age-adjusted premature mortality rates compared to their urban destinations, as indicated by the minimum BIC score occurring at $d_{ur} = 20$. However, the relationship between $d_{ur}$ and BIC score appears to be relatively flat, with all BIC scores remaining close to the minimum, regardless of the value of $d_{ur}$. Therefore, there is limited evidence of health-related selection from rural origins to urban destinations.
+[Figure 3.3](#figure-aim2_figure3) shows the relationship between BIC scores and values of $d_{ij}$ for each migration type, while holding other values constant at 0. For migration to rural counties ($d_{rr}$ and $d_{ru}$), the minimum BIC score occurs when the model assumes these counties attract individuals with average county health (i.e. when $d_{rr} = 0$ and $d_{ru} = 0$). However, for urban-to-urban migration ($d_{uu}$), lower BIC scores occur when the model assumes the urban counties attract individuals with lower age-adjusted premature mortality rates, suggesting that movers tend to migrate from healthier urban counties to less healthy urban counties. For rural-to-urban migration ($d_{ru}$), there is some indication that rural origins have higher age-adjusted premature mortality rates compared to their urban destinations, as indicated by the minimum BIC score occurring at $d_{ur} = 20$. However, the relationship between $d_{ur}$ and BIC score appears to be relatively flat, with all BIC scores remaining close to the minimum, regardless of the value of $d_{ur}$. Therefore, there is limited evidence of health-related selection from rural origins to urban destinations.
 
 :::{#figure-aim2_figure3}
 
