--- a/references.bib
+++ b/references.bib
@@ -3029,3 +3029,9 @@ PMID: 9202502},
 	title = {NIMH: Mental Illness},
 	url = {https://www.nimh.nih.gov/health/statistics/mental-illness.shtml}
 }
+
+@article{foster,
+	title = {CARRA Working Paper Series Working Paper 2018-07},
+	author = {Foster, Thomas B and Ellis, Mark and Fiorio, Lee},
+	langid = {en}
+}
