--- a/appendixB.qmd
+++ b/appendixB.qmd
@@ -9,11 +9,8 @@ execute:
 editor: visual
 ---
 \clearpage
-::: {#table-aim2_table3}
-## Table 3: BIC Scores relative to reference for models with and without urbanicity and migration
-
-\vspace{0.2cm}  <!-- Adds a small space after the heading to keep layout clean -->
-
+## BIC scores for models with and without urbanicity and migration 
+::: {#tbl-aim2_table3}
 
 ```{r}
 #| hold_position: true
