--- a/README.Rmd
+++ b/README.Rmd
@@ -4,51 +4,35 @@ output: pdf_document
 date: "2024-09-18"
 ---
 
-rothwell - need doi and date 
-marmot - all caps 
-greenland all caps 
-kolda missing doi 
-kearns missing doi 
-chilton missing doi 
-angelo missing doi 
-anderson missing doi 
-pierce missing doi 
+Abstract
+
+Throughout this dissertation, we explore the interconnected impacts of migration and urbanicity on place-based health determinants across the United States. Traditional place-based health measures often overlook the dynamic influence of migration, while conventional migration studies typically do not assess the broader place-level health impacts on origin and destination locations. By examining contextual (structural) and compositional (individual) factors, we assess how migration flows influence local health outcomes across varying urban and rural environments. Using publicly accessible county-level data and IRS migration flow records, we highlight how urbanicity and migration patterns together shape place-based health disparities, with special emphasis on mental health, premature mortality, and socioeconomic factors. Employing advanced spatial and tensor decomposition models, we aim to provide insight into the dynamics of population health, offering implications for localized health policy interventions and resource allocation across diverse communities.
 
 
-maybe: fix/ add to the future questions section 
-XXX cite irs/acs in aim 3 
-XXX make maps in aim3 vertical and time plot small beside 
-maps of other decomp in appendix????? 
 
 To do: 
 
-- Double space pdf output 
-- reformat / resize all tables to print nicely 
--XXX check all citations - make sure in-text citations look nice 
+XXX Double space pdf output 
+- switch screenshot tables to something better?  
+XXX check all citations 
+XXX make sure in-text citations look nice 
 - check format of citations - what did ken and megan use? 
--XXX need one mega citations list 
+XXX need one mega citations list 
 - move page numbers to top right 
 - check other UW formatting specifics to match 
--XXX check the whole document for "CITE" 
+XXX check the whole document for "CITE" 
 
 - Appendix A: 
     -XXX titles/ links of tables are misaligned 
     -XXX make sure in-text tables are linked instead of appendix tables (tables 1:4) 
 
-
 - Aim 2: 
     -XXX create aic table for appendix 
-    - make table 1 readable/ formatted correctly for pdf 
+    -XXX make table 1 readable/ formatted correctly for pdf 
+
 - Aim 3: 
-    - write up the approach that is running in tensor_nn.sub 
-    - write up the limitations of tensor decomp (from the readings) 
-    - get results of tensor_nn.sub from chtc 
-    - run the tensor_nn.sub on padj 
-    - run spatial model of result from tensor_nn.sub on chtc
-    - run spatial model of result from tensor_nn.sub on padj on chtc 
+    - more about padj? 
     
 - Intro: 
-    - add venn diagram of context/composition/migration/urbanicity 
+    - venn diagram?  
 
-- MPIDR 
-- CHRR 
